# turtle_group_ros1_ws

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/turtle_control/: StringArray.h  TurtleCreate.h  TurtleCreateRequest.h  TurtleCreateResponse.h  TurtleFollow.h  TurtleFollowRequest.h  TurtleFollowResponse.h
devel/include/turtle_interfaces/: StringArray.h  TurtleCreate.h  TurtleCreateRequest.h  TurtleCreateResponse.h  TurtleFollow.h  TurtleFollowRequest.h  TurtleFollowResponse.h
devel/lib/pkgconfig/: teleop_twist_keyboard.pc  turtle_control.pc  turtle_interfaces.pc
devel/lib/python3/dist-packages/turtle_control/msg/: _StringArray.py
devel/lib/python3/dist-packages/turtle_control/srv/: _TurtleCreate.py  _TurtleFollow.py  __init__.py
devel/lib/python3/dist-packages/turtle_interfaces/msg/: _StringArray.py
devel/lib/python3/dist-packages/turtle_interfaces/srv/: _TurtleCreate.py  _TurtleFollow.py
devel/lib/teleop_twist_keyboard/: teleop_twist_keyboard.py
devel/lib/turtle_control/: TFollowServer.py  TurtleClientNode.py  TurtleServerNode.py
devel/share/common-lisp/ros/turtle_control/msg/: StringArray.lisp  _package.lisp  _package_StringArray.lisp  turtle_control-msg.asd
devel/share/roseus/ros/turtle_control/: manifest.l
devel/share/roseus/ros/turtle_interfaces/: manifest.l
devel/share/teleop_twist_keyboard/cmake/: teleop_twist_keyboardConfig.cmake
devel/share/turtle_control/cmake/: turtle_control-msg-extras.cmake  turtle_control-msg-paths.cmake  turtle_controlConfig.cmake
devel/share/turtle_interfaces/cmake/: turtle_interfaces-msg-extras.cmake  turtle_interfaces-msg-paths.cmake  turtle_interfacesConfig.cmake
src/turtle_control/: CMakeLists.txt
src/turtle_control/src/: TFollowClient.py  TFollowServer.py  TurtleClientNode.py  TurtleServerNode.py
(+29 files in other folders)
